create action and reducer for getting work by id, create Work component

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -177,6 +177,14 @@ a:hover {
 }
 
 
+// work main page
+
+.row.work-information-card {
+  margin: 2rem;
+}
+
+
+
 
 /* media */
 
@@ -257,4 +265,6 @@ a:hover {
   }
 
 }
+
+
 
