create action and reducer for getting particular work's chapter, start create chapter page layout

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -193,6 +193,10 @@ a:hover {
     padding-bottom: 0.7rem;
     margin-top: 2rem;
   }
+
+  h6 {
+    margin-top: 1rem;
+  }
 }
 
 .row.work-content {
