chapter page layout

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -282,6 +282,21 @@ a:hover {
 
 
 
+// chapter
+
+.btn.next {
+  background-color: #7d4f50;
+  color: white;
+  margin: 1rem;
+}
+
+.chapter-text {
+  margin-left: 15%;
+  
+}
+
+
+
 /* media */
 
 
