show user info and user works on user page, refactor list of works for user page and works by fandoms, start layout for user page

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -297,6 +297,23 @@ a:hover {
   
 }
 
+.user-pic {
+  border: #7d4f50 3px solid;
+  width: 85px;
+  height: 85px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-img {
+  width: 55px;
+  height: 55px;
+  color: #7d4f50;
+  
+}
+
 
 
 /* media */
