--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -100,6 +100,74 @@ a:hover {
   
 // } 
 
+// Footer
+
+.footer-basic {
+  padding:40px 0;
+  background-color:$main-color;
+  color:#ffffff;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:38px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom:0;
+}
+
+
+
+
+// Home page
+
+
 .main-grid {
   display: grid;
   grid-template-columns: 2fr 5fr;
@@ -436,15 +504,15 @@ a:hover {
   flex-direction: column;
   min-height: 65vh;
   min-width: 35%;
-  background-color: lavender;
-  box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.2);
+  background-color: $main-color;
+  box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.9);
   border-radius: 5px;
 }
 
 .login-header {
   align-self: center;
   margin-top: 3rem;
-  color: #7d4f50;
+  color: #ffffff;
 }
 
 .form-group {
@@ -492,7 +560,9 @@ a:hover {
   justify-content: flex-start;
   align-items: baseline;
   margin-bottom: 2rem;
-
+    label {
+      color: white;
+    }
 }
 
 .password, .text {
@@ -508,7 +578,7 @@ a:hover {
   padding: 10px;
   border-radius: 5px;
   color: white;
-  background-color: #7d4f50;
+  background-color: $secondary-color;
 }
 
 .form-group button:disabled {
