implement component add new work

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -607,6 +607,19 @@ a:hover {
 
 
 
+/* add work */
+
+.add-work-form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field {
+  display: flex;
+}
+
+
+
 
 /* media */
 
