create option lists with react-select

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -618,6 +618,11 @@ a:hover {
   display: flex;
 }
 
+.warning-list, .rating-list, .category-list {
+  width: 40%;
+  margin-bottom: 2rem;
+}
+
 
 
 
