--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -618,7 +618,7 @@ a:hover {
   display: flex;
 }
 
-.warning-list, .rating-list, .category-list {
+.options-list {
   width: 40%;
   margin-bottom: 2rem;
 }
