--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -609,18 +609,72 @@ a:hover {
 
 /* add work */
 
+.add-work-title {
+  margin-top: 3rem;
+  color: $secondary-color;
+}
+
+.add-work-container, .add-work-title {
+  margin-left: 6rem;
+}
+
 .add-work-form-group {
   display: flex;
   flex-direction: column;
+  margin-top: 3rem;
 }
 
 .form-field {
-  display: flex;
+  margin-bottom: 2rem;
+}
+
+.form-field input {
+  width: 40%;
+  min-height: 3rem;
+  border: solid 1px black;
+  border-radius: 4px;
+  border-color: hsl(0, 0%, 80%);
+  padding: 5px 10px;
+}
+
+.form-field textarea {
+  width: 40%;
+  min-height: 10rem;
+  border-radius: 4px;
+  border-color: hsl(0, 0%, 80%);
+  padding: 5px 10px;;
 }
 
 .options-list {
   width: 40%;
   margin-bottom: 2rem;
+}
+
+.is-completed {
+  display: flex;
+  align-items: baseline;
+}
+
+.is-completed input {
+  margin-left: 0.7rem;
+}
+
+.add-work-form-group h5 {
+  color: $main-color;
+}
+
+.add-work-form-group button {
+  border: none;
+  width: 40%;
+  padding: 10px;
+  margin-top: 2rem;
+  border-radius: 5px;
+  color: white;
+  background-color: $secondary-color;
+}
+
+.add-work-form-group button:disabled {
+  background-color: #7d4f5080;
 }
 
 
