create action and reducer for AddChapter component, implement react-markdown component

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -664,7 +664,7 @@ a:hover {
   margin-left: 0.7rem;
 }
 
-.add-work-form-group h5 {
+.add-work-form-group h5, .add-chapter-form-group h5 {
   color: $main-color;
 }
 
