--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -341,6 +341,14 @@ a:hover {
   background-color: $tag-color;
   padding: 8px 10px;
   margin-right: 5px;
+  font-size: small;
+}
+
+.badge-pill {
+  background-color: #F1F1E6;
+  margin-right: 5px;
+  padding-top: 0.1em;
+  padding-bottom: 0.2em;
 }
 
 .work-description {
@@ -383,7 +391,9 @@ a:hover {
 
 .information-container {
   width: 75%;
+  
 }
+
 
 .work-title-container {
   display: flex;
@@ -453,11 +463,6 @@ a:hover {
   // margin-top: 1.2rem;
 }
 
-
-.svg-inline--fa {
-  
-  
-}
 
 .fa-2x {
   font-size: 1.2rem;
