--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -667,7 +667,7 @@ a:hover {
 }
 
 .form-field input {
-  width: 40%;
+  width: 45%;
   min-height: 3rem;
   border: solid 1px black;
   border-radius: 4px;
@@ -676,7 +676,7 @@ a:hover {
 }
 
 .form-field textarea {
-  width: 40%;
+  width: 45%;
   min-height: 10rem;
   border-radius: 4px;
   border-color: hsl(0, 0%, 80%);
@@ -684,7 +684,7 @@ a:hover {
 }
 
 .options-list {
-  width: 40%;
+  width: 45%;
   margin-bottom: 2rem;
 }
 
@@ -880,6 +880,16 @@ a:hover {
 .pagination-container {
   margin-left: 1.5rem;
 }
+/* all works */
+.all-works-main {
+  margin-top: 3rem;
+
+  h3 {
+    margin-left: 3rem;
+    margin-bottom: 1rem;
+  }
+}
+
 
 
 
@@ -893,6 +903,16 @@ a:hover {
     min-width: 55%;
   }
 
+  /* add work and chapter */
+
+  .form-field input, .form-field textarea {
+    width: 65%;
+  }
+
+  .options-list {
+    width: 65%;
+  }
+
 }
 
 @media only screen and (max-width: 995px) {
@@ -904,6 +924,20 @@ a:hover {
     min-height: 52vh;
     min-width: 56%;
   }
+
+  /* add work and chapter */
+
+  .form-field input, .form-field textarea {
+    width: 85%;
+  }
+
+  .options-list {
+    width: 85%;
+  }
+
+  .add-chapter-form-group .form-field {
+    width: 90%;
+}
 }
 
 @media only screen and (max-width: 767px) {
@@ -942,6 +976,17 @@ a:hover {
     min-height: 52vh;
     min-width: 56%;
   }
+
+  /* add work and chapter */
+
+  .form-field input {
+    width: 60%;
+  }
+
+  .add-work-container, .add-work-title, .add-chapter-container, .add-chapter-title {
+    margin-left: 2rem;
+  }
+
 
 }
 
