--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -487,6 +487,10 @@ a:hover {
     a {
       color: white;
       text-decoration: none;
+      display: inline-block;
+      z-index: 1;
+      margin: -0.5rem;
+      padding: 0.5rem;
     }
 }
 
