add action and reducer GetFandom

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -253,6 +253,11 @@ a:hover {
 
 // works list
 
+.works-in-fandom-title {
+  margin-top: 3rem;
+  margin-left: 3rem;
+}
+
 .works-by-fandom-container {
   margin-top: 2rem;
 }
