--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -252,7 +252,7 @@ a:hover {
 
 
 // works list
-.all-works-title, .works-in-fandom-title {
+.all-works-title, .works-in-fandom-title, .user-bookmarks-title {
   color: $secondary-color;
   margin-top: 3rem;
   margin-left: 3rem;
